// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render tag  slot correctly 1`] = `
<div class="ghb-address-list">
  <div role="radiogroup" class="ghb-radio-group"></div>
  <div class="ghb-address-list__bottom"><button class="ghb-button ghb-button--danger ghb-button--normal ghb-button--block ghb-button--round ghb-address-list__add">
      <div class="ghb-button__content"><span class="ghb-button__text">新增地址</span></div>
    </button></div>
</div>
`;

exports[`unswitchable 1`] = `
<div class="ghb-address-list">
  <div role="radiogroup" class="ghb-radio-group">
    <div class="ghb-address-item">
      <div class="ghb-cell ghb-cell--borderless">
        <div class="ghb-cell__value ghb-cell__value--alone ghb-address-item__value">
          <div class="ghb-address-item__name">张三 13000000000</div>
          <div class="ghb-address-item__address">浙江省杭州市西湖区文三路 138 号东方通信大厦 7 楼 501 室</div>
        </div><i class="ghb-icon ghb-icon-edit ghb-address-item__edit">
          <!----></i>
      </div>
    </div>
    <div class="ghb-address-item">
      <div class="ghb-cell ghb-cell--borderless">
        <div class="ghb-cell__value ghb-cell__value--alone ghb-address-item__value">
          <div class="ghb-address-item__name">李四 1310000000</div>
          <div class="ghb-address-item__address">浙江省杭州市拱墅区莫干山路 50 号</div>
        </div><i class="ghb-icon ghb-icon-edit ghb-address-item__edit">
          <!----></i>
      </div>
    </div>
  </div>
  <div class="ghb-address-list__bottom"><button class="ghb-button ghb-button--danger ghb-button--normal ghb-button--block ghb-button--round ghb-address-list__add">
      <div class="ghb-button__content"><span class="ghb-button__text">新增地址</span></div>
    </button></div>
</div>
`;
